(This file, CHANGES, lists fixes. See NEWS for new features and enhancements.)

2.6

  * Ancient bug with vertical clip edges fixed.
  
  * AutoComplete occasionally would omit some completions.

2.5

  * Pathologically long-running PARAGRAPH commands are now stoppable (^-\).
  
  * Moved modified flag '*' to right end of status line to be easier to see.

  * COPY, CUT, ERASE copy the correct text to the clip and do not crash
    any more when in free form mode and cursor or mark is beyond the
    end of a line.

  * ReplaceOnce was returning a generic error code instead of success,
    thus stopping macros.
 
2.4

  * CLOSEDOC and QUIT (^Q and Alt-Q) now close string requesters just like Esc.

  * Macro calling macros are now stopped at an arbitrary depth of 32 calls.

  * Last command of a loaded macro w/o trailing new-line now works.

  * Vertical block selections where mark is below cursor select correct text.

  * Mark right of a tab no longer moves when you change tab size.

  * MARK and MARKVERT with no parameters always set rather than toggle the mark.

  * Cursor no longer goes to start of line when you change tab size.

  * A couple of operations in free form mode (joining the first line with
    the following one and deleting a block with an extreme beyond the end
    of file) should not cause crashes anymore.

  * AUTOCOMPLETE could sometimes insert an inadvertent trailing "*".

2.3

  * Fixed ridiculously old bug when copying a block and the marker is
    after the cursor.

  * Tweak to syntax file for java.

  * Changed build date in "About" to ISO YYYY-MM-DD format.

  * Tweak suspend to signal process group; reduce chance of apparent hang.

  * Instantaneous window resize works again.

  * Now we display an error message (instead of crashing or returning an
    I/O error) when a file is too large (>=2GiB).

  * We no longer set the buffer filename in case of I/O error.

2.2
