@@ -29,71 +29,73 @@ char *error_msg[ERROR_COUNT] = {
 	/*  1 */ "Syntax error.",
 	/*  2 */ "Not found.",
 	/*  3 */ "Can't save a document. Exit suspended.",
-	/*  4 */ "You are not positioned over {}, (), [] or <>.",
-	/*  5 */ "Can't find matching bracket.",
-	/*  6 */ "Bookmark not set.",
-	/*  7 */ "Invalid Bookmark designation (use 0 through 9, -1, +1, or '-').",
-	/*  8 */ "No unset Bookmarks to set.",
-	/*  9 */ "No set Bookmarks to goto.",
-	/* 10 */ "No set Bookmarks to unset.",
-	/* 11 */ "Invalid level (use 0, '+', '-', or none).",
-	/* 12 */ "You cannot insert a character whose ASCII code is 0.",
-	/* 13 */ "No search string.",
-	/* 14 */ "No replace string.",
-	/* 15 */ "TAB size out of range.",
-	/* 16 */ "Invalid match mode.",
-	/* 17 */ "Mark a block first.",
-	/* 18 */ "Out of memory. DANGER!",
-	/* 19 */ "Nothing to undo.",
-	/* 20 */ "Nothing to redo",
-	/* 21 */ "Undo is not enabled",
-	/* 22 */ "No such command.",
-	/* 23 */ "Can execute only preference commands.",
-	/* 24 */ "Command needs a numeric argument.",
-	/* 25 */ "Command has no arguments.",
-	/* 26 */ "Command requires an argument.",
-	/* 27 */ "Wrong character after backslash.",
-	/* 28 */ "Can't open file.",
-	/* 29 */ "Can't open temporary files.",
-	/* 30 */ "Error while writing.",
-	/* 31 */ "Document name has no extension.",
-	/* 32 */ "Can't find or create $HOME/.ne directory.",
-	/* 33 */ "Clip does not exist.",
-	/* 34 */ "Mark is out of document.",
-	/* 35 */ "Can't open macro.",
-	/* 36 */ "Maximum macro depth exceeded.",
-	/* 37 */ "This file is read-only.",
-	/* 38 */ "Can't open file (file is migrated).",
-	/* 39 */ "Can't open file (file is a directory).",
-	/* 40 */ "Can't open file (file is too large).",
-	/* 41 */ "Stopped.",
-	/* 42 */ "I/O error.",
-	/* 43 */ "The argument string is empty.",
-	/* 44 */ "External command error.",
-	/* 45 */ "Escape time out of range.",
-	/* 46 */ "Prefs stack is full.",
-	/* 47 */ "Prefs stack is empty.",
-	/* 48 */ "The argument is not a number.",
-	/* 49 */ "This character is not supported in this configuration.",
-	/* 50 */ "This string is not supported in this configuration.",
-	/* 51 */ "This buffer is not UTF-8 encoded.",
-	/* 52 */ "This clip cannot be pasted in this buffer (incompatible encoding).",
-	/* 53 */ "This command line cannot be executed in this buffer (incompatible encoding).",
-	/* 54 */ "This string cannot be searched for in this buffer (incompatible encoding).",
-	/* 55 */ "This replacement string cannot be used in this buffer (incompatible encoding).",
-	/* 56 */ "UTF-8 character classes in regular expressions are not supported.",
-	/* 57 */ "Character classes cannot be complemented when matching against UTF-8 text.",
-	/* 58 */ "The specified regex replacement group is not available in UTF-8 mode",
-	/* 59 */ "Syntax highlighting is not enabled",
-	/* 60 */ "There is no syntax for that extension",
-	/* 61 */ "Invalid Shift specified (use [<|>][#][s|t]; default is \">1t\").",
-	/* 62 */ "Insufficient white space for requested left shift.",
+	/*  4 */ "Can't save all modified documents.",
+	/*  5 */ "You are not positioned over {}, (), [] or <>.",
+	/*  6 */ "Can't find matching bracket.",
+	/*  7 */ "Bookmark not set.",
+	/*  8 */ "Invalid Bookmark designation (use 0 through 9, -1, +1, or '-').",
+	/*  9 */ "No unset Bookmarks to set.",
+	/* 10 */ "No set Bookmarks to goto.",
+	/* 11 */ "No set Bookmarks to unset.",
+	/* 12 */ "Invalid level (use 0, '+', '-', or none).",
+	/* 13 */ "You cannot insert a character whose ASCII code is 0.",
+	/* 14 */ "No search string.",
+	/* 15 */ "No replace string.",
+	/* 16 */ "TAB size out of range.",
+	/* 17 */ "Invalid match mode.",
+	/* 18 */ "Mark a block first.",
+	/* 19 */ "Out of memory. DANGER!",
+	/* 20 */ "Nothing to undo.",
+	/* 21 */ "Nothing to redo",
+	/* 22 */ "Undo is not enabled",
+	/* 23 */ "No such command.",
+	/* 24 */ "Can execute only preference commands.",
+	/* 25 */ "Command needs a numeric argument.",
+	/* 26 */ "Command has no arguments.",
+	/* 27 */ "Command requires an argument.",
+	/* 28 */ "Wrong character after backslash.",
+	/* 29 */ "Can't open file.",
+	/* 30 */ "Can't open temporary files.",
+	/* 31 */ "Error while writing.",
+	/* 32 */ "Document name has no extension.",
+	/* 33 */ "Can't find or create $HOME/.ne directory.",
+	/* 34 */ "Clip does not exist.",
+	/* 35 */ "Mark is out of document.",
+	/* 36 */ "Can't open macro.",
+	/* 37 */ "Maximum macro depth exceeded.",
+	/* 38 */ "This file is read-only.",
+	/* 39 */ "Can't open file (file is migrated).",
+	/* 40 */ "Can't open file (file is a directory).",
+	/* 41 */ "Can't open file (file is too large).",
+	/* 42 */ "Stopped.",
+	/* 43 */ "I/O error.",
+	/* 44 */ "The argument string is empty.",
+	/* 45 */ "External command error.",
+	/* 46 */ "Escape time out of range.",
+	/* 47 */ "Prefs stack is full.",
+	/* 48 */ "Prefs stack is empty.",
+	/* 49 */ "The argument is not a number.",
+	/* 50 */ "This character is not supported in this configuration.",
+	/* 51 */ "This string is not supported in this configuration.",
+	/* 52 */ "This buffer is not UTF-8 encoded.",
+	/* 53 */ "This clip cannot be pasted in this buffer (incompatible encoding).",
+	/* 54 */ "This command line cannot be executed in this buffer (incompatible encoding).",
+	/* 55 */ "This string cannot be searched for in this buffer (incompatible encoding).",
+	/* 56 */ "This replacement string cannot be used in this buffer (incompatible encoding).",
+	/* 57 */ "UTF-8 character classes in regular expressions are not supported.",
+	/* 58 */ "Character classes cannot be complemented when matching against UTF-8 text.",
+	/* 59 */ "The specified regex replacement group is not available in UTF-8 mode",
+	/* 60 */ "Syntax highlighting is not enabled",
+	/* 61 */ "There is no syntax for that extension",
+	/* 62 */ "Invalid Shift specified (use [<|>][#][s|t]; default is \">1t\").",
+	/* 63 */ "Insufficient white space for requested left shift.",
 
 };
 
 char *info_msg[INFO_COUNT] = {
 	"Saving...",
 	"Saved.",
+	"All modified documents saved.",
 	"Select file or press F1, Escape or Escape-Escape to enter a file name.",
 	"Start of block marked. Move to the end of block and request actions.",
 	"Start of vertical block marked. Move to the end of block and request actions.",
