@@ -47,65 +47,66 @@ enum error {
 	/*  1 */ SYNTAX_ERROR = 1,
 	/*  2 */ NOT_FOUND,
 	/*  3 */ CANT_SAVE_EXIT_SUSPENDED,
-	/*  4 */ NOT_ON_A_BRACKET,
-	/*  5 */ CANT_FIND_BRACKET,
-	/*  6 */ BOOKMARK_NOT_SET,
-	/*  7 */ INVALID_BOOKMARK_DESIGNATION, 
-	/*  8 */ NO_UNSET_BOOKMARKS_TO_SET,
-	/*  9 */ NO_SET_BOOKMARKS_TO_GOTO,
-	/* 10 */ NO_SET_BOOKMARKS_TO_UNSET,
-	/* 11 */ INVALID_LEVEL,
-	/* 12 */ CANT_INSERT_0,
-	/* 13 */ NO_SEARCH_STRING,
-	/* 14 */ NO_REPLACE_STRING,
-	/* 15 */ TAB_SIZE_OUT_OF_RANGE,
-	/* 16 */ INVALID_MATCH_MODE,
-	/* 17 */ MARK_BLOCK_FIRST,
-	/* 18 */ OUT_OF_MEMORY,
-	/* 19 */ NOTHING_TO_UNDO,
-	/* 20 */ NOTHING_TO_REDO,
-	/* 21 */ UNDO_NOT_ENABLED,
-	/* 22 */ NO_SUCH_COMMAND,
-	/* 23 */ CAN_EXECUTE_ONLY_OPTIONS,
-	/* 24 */ HAS_NUMERIC_ARGUMENT,
-	/* 25 */ HAS_NO_ARGUMENT,
-	/* 26 */ REQUIRES_ARGUMENT,
-	/* 27 */ WRONG_CHAR_AFTER_BACKSLASH,
-	/* 28 */ CANT_OPEN_FILE,
-	/* 29 */ CANT_OPEN_TEMPORARY_FILE,
-	/* 30 */ ERROR_WHILE_WRITING,
-	/* 31 */ HAS_NO_EXTENSION,
-	/* 32 */ CANT_FIND_PREFS_DIR,
-	/* 33 */ CLIP_DOESNT_EXIST,
-	/* 34 */ MARK_OUT_OF_BUFFER,
-	/* 35 */ CANT_OPEN_MACRO,
-	/* 36 */ MAX_MACRO_DEPTH_EXCEEDED,
-	/* 37 */ FILE_IS_READ_ONLY,
-	/* 38 */ FILE_IS_MIGRATED,
-	/* 39 */ FILE_IS_DIRECTORY,
-	/* 40 */ FILE_IS_TOO_LARGE,
-	/* 41 */ STOPPED,
-	/* 42 */ IO_ERROR,
-	/* 43 */ STRING_IS_EMPTY,
-	/* 44 */ EXTERNAL_COMMAND_ERROR,
-	/* 45 */ ESCAPE_TIME_OUT_OF_RANGE,
-	/* 46 */ PREFS_STACK_FULL,
-	/* 47 */ PREFS_STACK_EMPTY,
-	/* 48 */ NOT_A_NUMBER,
-	/* 49 */ INVALID_CHARACTER,
-	/* 50 */ INVALID_STRING,
-	/* 51 */ BUFFER_IS_NOT_UTF8,
-	/* 52 */ INCOMPATIBLE_CLIP_ENCODING,
-	/* 53 */ INCOMPATIBLE_COMMAND_ENCODING,
-	/* 54 */ INCOMPATIBLE_SEARCH_STRING_ENCODING,
-	/* 55 */ INCOMPATIBLE_REPLACE_STRING_ENCODING,
-	/* 56 */ UTF8_REGEXP_CHARACTER_CLASS_NOT_SUPPORTED,
-	/* 57 */ UTF8_REGEXP_COMP_CHARACTER_CLASS_NOT_SUPPORTED,
-	/* 58 */ GROUP_NOT_AVAILABLE,
-	/* 59 */ SYNTAX_NOT_ENABLED,
-	/* 60 */ NO_SYNTAX_FOR_EXT,
-	/* 61 */ INVALID_SHIFT_SPECIFIED,
-	/* 62 */ INSUFFICIENT_WHITESPACE,
+	/*  4 */ CANT_SAVE_ALL,
+	/*  5 */ NOT_ON_A_BRACKET,
+	/*  6 */ CANT_FIND_BRACKET,
+	/*  7 */ BOOKMARK_NOT_SET,
+	/*  8 */ INVALID_BOOKMARK_DESIGNATION, 
+	/*  9 */ NO_UNSET_BOOKMARKS_TO_SET,
+	/* 10 */ NO_SET_BOOKMARKS_TO_GOTO,
+	/* 11 */ NO_SET_BOOKMARKS_TO_UNSET,
+	/* 12 */ INVALID_LEVEL,
+	/* 13 */ CANT_INSERT_0,
+	/* 14 */ NO_SEARCH_STRING,
+	/* 15 */ NO_REPLACE_STRING,
+	/* 16 */ TAB_SIZE_OUT_OF_RANGE,
+	/* 17 */ INVALID_MATCH_MODE,
+	/* 18 */ MARK_BLOCK_FIRST,
+	/* 19 */ OUT_OF_MEMORY,
+	/* 20 */ NOTHING_TO_UNDO,
+	/* 21 */ NOTHING_TO_REDO,
+	/* 22 */ UNDO_NOT_ENABLED,
+	/* 23 */ NO_SUCH_COMMAND,
+	/* 24 */ CAN_EXECUTE_ONLY_OPTIONS,
+	/* 25 */ HAS_NUMERIC_ARGUMENT,
+	/* 26 */ HAS_NO_ARGUMENT,
+	/* 27 */ REQUIRES_ARGUMENT,
+	/* 28 */ WRONG_CHAR_AFTER_BACKSLASH,
+	/* 29 */ CANT_OPEN_FILE,
+	/* 30 */ CANT_OPEN_TEMPORARY_FILE,
+	/* 31 */ ERROR_WHILE_WRITING,
+	/* 32 */ HAS_NO_EXTENSION,
+	/* 33 */ CANT_FIND_PREFS_DIR,
+	/* 34 */ CLIP_DOESNT_EXIST,
+	/* 35 */ MARK_OUT_OF_BUFFER,
+	/* 36 */ CANT_OPEN_MACRO,
+	/* 37 */ MAX_MACRO_DEPTH_EXCEEDED,
+	/* 38 */ FILE_IS_READ_ONLY,
+	/* 39 */ FILE_IS_MIGRATED,
+	/* 40 */ FILE_IS_DIRECTORY,
+	/* 41 */ FILE_IS_TOO_LARGE,
+	/* 42 */ STOPPED,
+	/* 43 */ IO_ERROR,
+	/* 44 */ STRING_IS_EMPTY,
+	/* 45 */ EXTERNAL_COMMAND_ERROR,
+	/* 46 */ ESCAPE_TIME_OUT_OF_RANGE,
+	/* 47 */ PREFS_STACK_FULL,
+	/* 48 */ PREFS_STACK_EMPTY,
+	/* 49 */ NOT_A_NUMBER,
+	/* 50 */ INVALID_CHARACTER,
+	/* 51 */ INVALID_STRING,
+	/* 52 */ BUFFER_IS_NOT_UTF8,
+	/* 53 */ INCOMPATIBLE_CLIP_ENCODING,
+	/* 54 */ INCOMPATIBLE_COMMAND_ENCODING,
+	/* 55 */ INCOMPATIBLE_SEARCH_STRING_ENCODING,
+	/* 56 */ INCOMPATIBLE_REPLACE_STRING_ENCODING,
+	/* 57 */ UTF8_REGEXP_CHARACTER_CLASS_NOT_SUPPORTED,
+	/* 58 */ UTF8_REGEXP_COMP_CHARACTER_CLASS_NOT_SUPPORTED,
+	/* 59 */ GROUP_NOT_AVAILABLE,
+	/* 60 */ SYNTAX_NOT_ENABLED,
+	/* 61 */ NO_SYNTAX_FOR_EXT,
+	/* 62 */ INVALID_SHIFT_SPECIFIED,
+	/* 63 */ INSUFFICIENT_WHITESPACE,
 
 	ERROR_COUNT
 };
@@ -113,6 +114,7 @@ enum error {
 enum info {
 	SAVING,
 	SAVED,
+	MODIFIED_SAVED,
 	PRESSF1,
 	BLOCK_START_MARKED,
 	VERTICAL_BLOCK_START_MARKED,
