@@ -6,6 +6,9 @@
   
   * AutoComplete occasionally would omit some completions.
 
+  * Exit attempts to save all modified document even if one cannot be saved.
+    (It use to give up on the first error.)
+
 2.5
 
   * Pathologically long-running PARAGRAPH commands are now stoppable (^-\).
